tests/test192.rael.exp
Error [tests/test192.rael:1:13]: Unexpected end-of-line
| :a ?= "abc\ 
|             ^
